correct avatar spacing

--- a/app/assets/stylesheets/app/main.scss
+++ b/app/assets/stylesheets/app/main.scss
@@ -87,7 +87,7 @@ li {
 .post-avatar {
   height: 36px;
   width: 36px;
-  margin-top: 0px;
+  margin-top: 2px;
   margin-right: 9px;
 }
 
